# AoC2023

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: code-quality.yaml
aoc2023/day1/: __init__.py  __main__.py  day1_test.py
aoc2023/day10/: __init__.py  __main__.py  day10_test.py
aoc2023/day11/: __init__.py  __main__.py  day11_test.py
aoc2023/day12/: __init__.py  __main__.py  day12_test.py
aoc2023/day13/: __init__.py  __main__.py  day13_test.py
aoc2023/day14/: __init__.py  __main__.py  day14_test.py
aoc2023/day15/: __init__.py  __main__.py  day15_test.py
aoc2023/day16/: __init__.py  __main__.py  day16_test.py
aoc2023/day17/: __init__.py  __main__.py  day17_test.py
aoc2023/day18/: __init__.py  __main__.py  day18_test.py
aoc2023/day19/: __init__.py  __main__.py  day19_test.py
aoc2023/day2/: __init__.py  __main__.py  day2_test.py
aoc2023/day20/: __init__.py  __main__.py  analysis.txt  day20_test.py
aoc2023/day21/: __init__.py  __main__.py  day21_test.py
aoc2023/day22/: __init__.py  __main__.py  day22_test.py
aoc2023/day23/: __init__.py  __main__.py  day23_test.py
aoc2023/day24/: __init__.py  __main__.py  day24_test.py
aoc2023/day25/: __init__.py  __main__.py  day25_test.py
aoc2023/day3/: __init__.py  __main__.py  day3_test.py
aoc2023/day4/: __init__.py  __main__.py  day4_test.py
aoc2023/day5/: __init__.py  __main__.py  day5_test.py
aoc2023/day6/: __init__.py  __main__.py  day6_test.py
aoc2023/day7/: __init__.py  __main__.py  day7_test.py
aoc2023/day8/: __init__.py  __main__.py  day8_test.py
(+8 files in other folders)
